--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   sqflite: ^2.4.1
   sqflite_common_ffi: ^2.3.4+4
+  web_socket_channel: ^3.0.2
+  http: ^1.3.0
+  connectivity_plus: ^6.1.2
 
 dev_dependencies:
   flutter_test:
